# medbot

./: .gitignore  LICENSE  README.md  app.py  compare_results.py  graph_test.py  graph_test_sys_rag.py  graph_test_sysprompt.py  pyproject.toml  test_queries.txt
Data/: alerts.csv  diabetic_indices.csv  diagnosis.csv  encounter_history.csv  immunizations.csv  medications.csv  patient_details.csv  prescriptions.csv  user_credentials.csv
research/: trails.ipynb
src/medbot/: data_loader.py  helper.py  hospital_agents.py  store_index.py
tests/: agent_runner.py  test_agent_responses.py  test_cases.py
